# mandelbrot_set

./: Cargo.toml  README.md  shell.nix
.github/workflows/: build.yml
benches/: seq.rs  seq_sse2.rs
src/: core.rs  lib.rs  main.rs  seq.rs  seq_sse2.rs  threadpool.rs  utils.rs
