[package]
name = "mandelbrot-set"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
threadpool = { git = "https://github.com/BWbwchen/threadpool.git", rev = "d563151c87e563b139cf8cbb6048c4eed75e183e"}

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "seq"
harness = false

[[bench]]
name = "seq_sse2"
harness = false
